# AnalysisSitus

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.server  README  as1-oc-214.gltf  asiExe.sh  asiExeServer.sh  jenkins-clone-data.bat  jenkins-configure-and-build-sdk-nomobius.bat  jenkins-configure-and-build-sdk.bat  jenkins-configure-and-build.bat  jenkins-copy-lastbuild-sdk-nomobius.bat  jenkins-copy-lastbuild-sdk.bat  jenkins-copy-lastbuild.bat  jenkins-custom.bat  jenkins-install-products.bat  jenkins-parsing-rules.txt  jenkins-run-tests.bat  run-docker-with-display.sh
docs/docapi/: CMakeLists.txt  Doxyfile.in
src/asiActiveData/: ActData.h  ActData_Common.cpp  ActData_Common.h  ActData_Plugin.cpp  ActData_Plugin.h  CMakeLists.txt
src/asiActiveData/API/: ActAPI_Common.h  ActAPI_IAlgorithm.cpp  ActAPI_IAlgorithm.h  ActAPI_IDataCursor.cpp  ActAPI_IDataCursor.h  ActAPI_ILogger.cpp  ActAPI_ILogger.h  ActAPI_IModel.cpp  ActAPI_IModel.h  ActAPI_INode.cpp  ActAPI_INode.h  ActAPI_IParameter.cpp  ActAPI_IParameter.h  ActAPI_IPartition.cpp  ActAPI_IPartition.h  ActAPI_IPlotter.cpp  ActAPI_IPlotter.h  ActAPI_IProgressNotifier.cpp  ActAPI_IProgressNotifier.h  ActAPI_ITreeFunction.cpp  ActAPI_ITreeFunction.h  ActAPI_TxData.h  ActAPI_TxRes.h  ActAPI_Variables.cpp  ActAPI_Variables.h  ActAPI_Version.h
src/asiActiveData/BinDrivers/: ActData_BinDrivers.cpp  ActData_BinDrivers.h  ActData_BinRetrievalDriver.cpp  ActData_BinRetrievalDriver.h  ActData_BinStorageDriver.cpp  ActData_BinStorageDriver.h  ActData_MeshDriver.cpp  ActData_MeshDriver.h
src/asiActiveData/Kernel/: ActData_Application.cpp  ActData_Application.h  ActData_AsciiStringParameter.cpp  ActData_AsciiStringParameter.h  ActData_BaseModel.cpp  ActData_BaseModel.h  ActData_BaseNode.cpp  ActData_BaseNode.h  ActData_BasePartition.cpp  ActData_BasePartition.h  ActData_BaseTreeFunction.cpp  ActData_BaseTreeFunction.h  ActData_BoolArrayParameter.cpp  ActData_BoolArrayParameter.h  ActData_BoolParameter.cpp  ActData_BoolParameter.h  ActData_ComplexArrayParameter.cpp  ActData_ComplexArrayParameter.h  ActData_CopyPasteEngine.cpp  ActData_CopyPasteEngine.h  ActData_DependencyAnalyzer.cpp  ActData_DependencyAnalyzer.h  ActData_DependencyGraph.cpp  ActData_DependencyGraph.h  ActData_DependencyGraphIterator.cpp  ActData_DependencyGraphIterator.h  ActData_ExtTransactionEngine.cpp  ActData_ExtTransactionEngine.h  ActData_FuncExecutionCtx.cpp  ActData_FuncExecutionCtx.h  ActData_FuncExecutionTask.cpp  ActData_FuncExecutionTask.h  ActData_GraphFrozenException.h  ActData_GroupParameter.cpp  ActData_GroupParameter.h  ActData_IntArrayParameter.cpp  ActData_IntArrayParameter.h  ActData_IntParameter.cpp  ActData_IntParameter.h  ActData_LogBook.cpp  (+52 more)
src/asiActiveData/Mesh/: ActData_MeshAttr.cpp  ActData_MeshAttr.h  ActData_MeshDeltaEntities.cpp  ActData_MeshDeltaEntities.h  ActData_MeshMDelta.cpp  ActData_MeshMDelta.h
src/asiActiveData/Patterns/: ActData_RealArrayOwnerAPI.cpp  ActData_RealArrayOwnerAPI.h  ActData_RecordCollectionOwnerAPI.cpp  ActData_RecordCollectionOwnerAPI.h
src/asiActiveData/STD/: ActData_BaseVarNode.cpp  ActData_BaseVarNode.h  ActData_BoolVarNode.cpp  ActData_BoolVarNode.h  ActData_BoolVarPartition.cpp  ActData_BoolVarPartition.h  ActData_IntVarNode.cpp  ActData_IntVarNode.h  ActData_IntVarPartition.cpp  ActData_IntVarPartition.h  ActData_RealEvaluatorFunc.cpp  ActData_RealEvaluatorFunc.h  ActData_RealVarNode.cpp  ActData_RealVarNode.h  ActData_RealVarPartition.cpp  ActData_RealVarPartition.h
src/asiActiveData/Tools/: ActAux.h  ActAux_ArrayUtils.cpp  ActAux_ArrayUtils.h  ActAux_Common.h  ActAux_Env.h  ActAux_ExprCalculator.cpp  ActAux_ExprCalculator.h  ActAux_FileDumper.cpp  ActAux_FileDumper.h  ActAux_ShapeFactory.cpp  ActAux_ShapeFactory.h  ActAux_SpyLog.cpp  ActAux_SpyLog.h  ActAux_TimeStamp.cpp  ActAux_TimeStamp.h  ActAux_Timing.h  ActAux_Utils.cpp  ActAux_Utils.h  ActData_CAFConversionAsset.cpp  ActData_CAFConversionAsset.h  ActData_CAFConversionCtx.cpp  ActData_CAFConversionCtx.h  ActData_CAFConversionModel.cpp  ActData_CAFConversionModel.h  ActData_CAFConversionNode.cpp  ActData_CAFConversionNode.h  ActData_CAFConversionParameter.cpp  ActData_CAFConversionParameter.h  ActData_CAFConverter.cpp  ActData_CAFConverter.h  ActData_CAFConverterBase.h  ActData_CAFDumper.cpp  (+9 more)
src/asiAlgo/: CMakeLists.txt  asiAlgo.h  asiAlgo_BSplineSurface.cpp  asiAlgo_BSplineSurface.h  asiAlgo_Outcome.cpp  asiAlgo_Outcome.h  asiAlgo_Version.cpp  asiAlgo_Version.h
src/asiAsm/: CMakeLists.txt  asiAsm.h  asiAsm_Dict.h
src/asiTcl/: CMakeLists.txt  asiTcl.h  asiTcl_Interp.cpp  asiTcl_Interp.h  asiTcl_Plugin.cpp  asiTcl_Plugin.h  asiTcl_Variable.cpp  asiTcl_Variable.h
src/asiTest/: CMakeLists.txt  asiTest_CaseIDs.h  asiTest_CommonFacilities.cpp  asiTest_CommonFacilities.h  asiTest_Main.cpp  asiTest_TclTestCase.cpp  asiTest_TclTestCase.h
src/asiTestEngine/: CMakeLists.txt  asiTestEngine_FileComparator.cpp  asiTestEngine_FileComparator.h  asiTestEngine_Launcher.cpp  asiTestEngine_Launcher.h  asiTestEngine_Macro.h  asiTestEngine_ResultGroup.h  asiTestEngine_Status.h  asiTestEngine_TestCase.cpp  asiTestEngine_TestCase.h  asiTestEngine_Utils.cpp  asiTestEngine_Utils.h  outcome.h
src/cmdAsm/: CMakeLists.txt  cmdAsm.cpp  cmdAsm.h  cmdAsm_Xde.cpp  cmdAsm_XdeItemFeature.cpp  cmdAsm_XdeItemFeature.h  cmdAsm_XdeModel.cpp  cmdAsm_XdeModel.h
src/cmdMobius/: CMakeLists.txt  cmdMobius.cpp  cmdMobius.h  cmdMobius_Mesh.cpp  cmdMobius_Mesh.h
src/cmdTest/: CMakeLists.txt  cmdTest.cpp  cmdTest.h  cmdTest_Clock.cpp  cmdTest_Mesh.cpp  cmdTest_Points.cpp  cmdTest_Shape.cpp
src/exe/: CMakeLists.txt  exe_GenerateDocs.cpp  exe_GenerateDocs.h  exe_Keywords.h  exe_Main.cpp
src/exeCli/: CMakeLists.txt  exe_BaseCmd.cpp  exe_BaseCmd.h  exe_CommandQueue.h  exe_CommandServer.cpp  exe_CommandServer.h  exe_CommandWindow.cpp  exe_CommandWindow.h  exe_Keywords.h  exe_Main.cpp  exe_SharedQueue.cpp  exe_SharedQueue.h
src/exeServer/: CMakeLists.txt  exe_CommandServer.cpp  exe_CommandServer.h  exe_Keywords.h  exe_Main.cpp
(+2005 files in other folders)
